# sqp_proxqp

./: CMakeLists.txt  LICENSE  README.md
example/: brick_falling_sqp.cpp  brick_sqp.cpp
include/: sqp_proxqp.hpp
src/: sqp_proxqp.cpp
